# GL-Sandbox

./: .gitignore  CMakeLists.txt
assets/hall/: NHMHintzeHall01.mtl
assets/x-wing/: x-wing.mtl
build-debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build-debug/.cmake/api/v1/reply/: cache-v2-0104a85f6c7698d6e06d.json  cmakeFiles-v1-4465085dff21f9d00635.json  codemodel-v2-000b5f91ee281b6770eb.json  index-2023-03-20T22-33-30-0300.json  target-glfw-Debug-128bad178b90e1861421.json  target-glsandbox-Debug-f1093deaaffbb74b645e.json
build-debug/src/: cmake_install.cmake
build-release/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build-release/.cmake/api/v1/reply/: cache-v2-06c3bebdf37f89070298.json  cmakeFiles-v1-c91f37ecb1e3fee09951.json  codemodel-v2-8e3a7a47749d6e6eeb41.json  index-2023-03-20T22-33-30-0302.json  target-glfw-Release-ce96957323ba0f555bc3.json  target-glsandbox-Release-49a8426319ad43a3fae1.json
build-release/src/: cmake_install.cmake
shaders/: basic.frag  basic.vert  lighting.frag  lighting.vert  model.vert
src/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  window.hpp
src/camera/: camera.cpp  camera.hpp
src/lighting/: light.cpp  light.hpp
src/mesh/: mesh.cpp  mesh.hpp
src/model/: model.cpp  model.hpp
src/object/: cube.cpp  cube.hpp  object.cpp  object.hpp  plane.cpp  plane.hpp
src/shader/: shader.cpp  shader.hpp
src/texture/: texture.cpp  texture.hpp
